Refactored to ESM from IIFE, enhanced documentation

--- a/index.html
+++ b/index.html
@@ -173,10 +173,6 @@
         </aside>
     </div>
 
-    <script src="js/parser.js"></script>
-    <script src="js/timeline.js"></script>
-    <script src="js/utils.js"></script>
-    <script src="js/detail-renderer.js"></script>
-    <script src="js/app.js"></script>
+    <script type="module" src="js/app.js"></script>
 </body>
 </html>
